--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,14 +29,14 @@ dist.jar=${dist.dir}/ProjArq.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.commons-codec-1.10.jar=C:\\poi-3.17\\lib\\commons-codec-1.10.jar
-file.reference.commons-collections4-4.1.jar=C:\\poi-3.17\\lib\\commons-collections4-4.1.jar
-file.reference.opencv-331.jar=C:\\opencv\\build\\java\\opencv-331.jar
-file.reference.poi-3.17.jar=C:\\poi-3.17\\poi-3.17.jar
-file.reference.poi-excelant-3.17.jar=C:\\poi-3.17\\poi-excelant-3.17.jar
-file.reference.poi-ooxml-3.17.jar=C:\\poi-3.17\\poi-ooxml-3.17.jar
-file.reference.poi-ooxml-schemas-3.17.jar=C:\\poi-3.17\\poi-ooxml-schemas-3.17.jar
-file.reference.xmlbeans-2.6.0.jar=C:\\poi-3.17\\ooxml-lib\\xmlbeans-2.6.0.jar
+file.reference.commons-codec-1.10.jar=lib/commons-codec-1.10.jar
+file.reference.commons-collections4-4.1.jar=lib/commons-collections4-4.1.jar
+file.reference.opencv-331.jar=lib/opencv-331.jar
+file.reference.poi-3.17.jar=lib/poi-3.17.jar
+file.reference.poi-excelant-3.17.jar=lib/poi-excelant-3.17.jar
+file.reference.poi-ooxml-3.17.jar=lib/poi-ooxml-3.17.jar
+file.reference.poi-ooxml-schemas-3.17.jar=lib/poi-ooxml-schemas-3.17.jar
+file.reference.xmlbeans-2.6.0.jar=lib/xmlbeans-2.6.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
