--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,7 +31,7 @@ endorsed.classpath=
 excludes=
 file.reference.commons-codec-1.10.jar=lib/commons-codec-1.10.jar
 file.reference.commons-collections4-4.1.jar=lib/commons-collections4-4.1.jar
-file.reference.opencv-331.jar=lib/opencv-331.jar
+file.reference.opencv-341.jar=lib\\opencv-341.jar
 file.reference.poi-3.17.jar=lib/poi-3.17.jar
 file.reference.poi-excelant-3.17.jar=lib/poi-excelant-3.17.jar
 file.reference.poi-ooxml-3.17.jar=lib/poi-ooxml-3.17.jar
@@ -40,14 +40,14 @@ file.reference.xmlbeans-2.6.0.jar=lib/xmlbeans-2.6.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.opencv-331.jar}:\
     ${file.reference.poi-3.17.jar}:\
     ${file.reference.poi-excelant-3.17.jar}:\
     ${file.reference.poi-ooxml-3.17.jar}:\
     ${file.reference.xmlbeans-2.6.0.jar}:\
     ${file.reference.commons-codec-1.10.jar}:\
     ${file.reference.commons-collections4-4.1.jar}:\
-    ${file.reference.poi-ooxml-schemas-3.17.jar}
+    ${file.reference.poi-ooxml-schemas-3.17.jar}:\
+    ${file.reference.opencv-341.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=-Xlint:unchecked
 javac.deprecation=false
